Bug 391640 - Unable to use the "Open" link in download manager.  r=cbiesinger, sr=dmose, a=bzbarsky